--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -2,7 +2,10 @@
 <nav class="navbar navbar-dark navbar-expand-lg navbar-primary" data-selector="navbar" id="top-navbar">
   <div class="container-fluid navbar-container">
     <%= link to: webapp_url(@conn)/, class: "navbar-brand", "data-test": "header_logo" do %>
-        <img class="navbar-logo" id="navbar-logo" src="/images/blockscout_logo.svg" alt="<%= subnetwork_title() %>"/>
+      <%= if logo() do %>
+        <span></span>
+      <% end %>
+      <img class="navbar-logo" id="navbar-logo" src="/images/blockscout_logo.svg" alt="<%= subnetwork_title() %>"/>
       <%= if logo_text() do %>
         <span class="logo-text <%= unless logo(), do: "no-logo" %>"> <%= logo_text() %> </span>
       <% end %>
