--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -46,7 +46,7 @@
               <div class="nav-submenu">
                 <span>
                   <%= gettext("Transactions") %>
-                </span>
+                </span> 
               </div>
               <% json_rpc_named_arguments = Application.fetch_env!(:indexer, :json_rpc_named_arguments)%>
               <% variant = Keyword.fetch!(json_rpc_named_arguments, :variant) %>
@@ -66,7 +66,7 @@
               <% end %>
               <%= link(gettext("Verified contracts"),
                     to: verified_contracts_path(@conn, :index),
-                    class: "dropdown-item #{tab_status("reorgs", @conn.request_path)}")%>
+                    class: "dropdown-item #{tab_status("verified-contracts", @conn.request_path)}")%>
             </div>
           </li>
           <li class="nav-item dropdown">
