--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -1,12 +1,12 @@
 <% apps_menu = Application.get_env(:block_scout_web, :apps_menu) %>
-<% other_nets = dropdown_other_nets() %>
-<% test_nets = test_nets(dropdown_nets()) %>
-<% main_nets = dropdown_head_main_nets() %>
+
 <nav class="navbar navbar-dark navbar-expand-lg navbar-primary" data-selector="navbar" id="top-navbar">
   <div class="container-fluid navbar-container">
-    <%= link to: webapp_url(@conn), class: "navbar-brand", "data-test": "header_logo" do %>
-      <%= if logo() do %>
-        <img class="navbar-logo" id="navbar-logo" src="<%= static_path(@conn, logo()) %>" alt="<%= subnetwork_title() %>" />
+     <%= link to: System.get_env("PATH_PREFIX") || webapp_url(@conn), id: "navbar-home-link", class: "navbar-brand", "data-test": "header_logo" do %>
+      <%= if System.get_env("PATH_PREFIX") do %>
+        <img class="navbar-logo" id="navbar-logo" src="<%= System.get_env("PATH_PREFIX") <> "/images/blockscout_logo.svg"  %>" alt="<%= subnetwork_title() %>"/>
+        <% else %>
+        <img class="navbar-logo" id="navbar-logo" src="/images/blockscout_logo.svg" alt="<%= subnetwork_title() %>"/>
       <% end %>
       <%= if logo_text() do %>
         <span class="logo-text <%= unless logo(), do: "no-logo" %>"> <%= logo_text() %> </span>
@@ -153,34 +153,6 @@
             </div>
           </li>
         <% end %>
-        <li class="nav-item dropdown">
-          <a class="nav-link topnav-nav-link active-icon <%= if dropdown_nets() != [], do: "dropdown-toggle" %>" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="nav-link-icon">
-              <%= render BlockScoutWeb.IconsView, "_active_icon.html" %>
-            </span>
-            <%= subnetwork_title() %>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown"> 
-            <%= if Enum.count(main_nets) > 0 do %>
-              <a class="dropdown-item header division">Mainnets</a> 
-              <%= for %{url: url, title: title} <- main_nets do %>  
-                <a class="dropdown-item" href="<%= url %>"><%= title %></a>
-              <% end %>
-            <% end %>
-            <%= if Enum.count(test_nets) > 0 do %>
-              <a class="dropdown-item header division">Testnets</a> 
-              <%= for %{url: url, title: title} <- test_nets do %> 
-                <a class="dropdown-item" href="<%= url %>"><%= title %></a>
-              <% end %>
-            <% end %>
-            <%= if Enum.count(other_nets) > 0 do %>
-              <a class="dropdown-item header division">Other Networks</a> 
-              <%= for %{url: url, title: title} <- other_nets do %>  
-                <a class="dropdown-item" href="<%= url %>"><%= title %></a>
-              <% end %> 
-            <% end %>
-          </div>
-        </li>
         <!-- Dark mode changer -->
         <%= unless Application.get_env(:block_scout_web, :permanent_light_mode_enabled) || Application.get_env(:block_scout_web, :permanent_dark_mode_enabled) do %>
           <button class="dark-mode-changer" id="dark-mode-changer">
