--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -4,9 +4,11 @@
 <% main_nets = dropdown_head_main_nets() %>
 <nav class="navbar navbar-dark navbar-expand-lg navbar-primary" data-selector="navbar" id="top-navbar">
   <div class="container-fluid navbar-container">
-    <%= link to: webapp_url(@conn), class: "navbar-brand", "data-test": "header_logo" do %>
-      <%= if logo() do %>
-        <img class="navbar-logo" id="navbar-logo" src="<%= static_path(@conn, logo()) %>" alt="<%= subnetwork_title() %>" />
+    <%= link to: System.get_env("NETWORK_PATH") || webapp_url(@conn), id: "navbar-home-link", class: "navbar-brand", "data-test": "header_logo" do %>
+      <%= if System.get_env("NETWORK_PATH") do %>
+        <img class="navbar-logo" id="navbar-logo" src="<%= System.get_env("NETWORK_PATH") <> "/images/blockscout_logo.svg"  %>" alt="<%= subnetwork_title() %>"/>
+        <% else %>
+        <img class="navbar-logo" id="navbar-logo" src="/images/blockscout_logo.svg" alt="<%= subnetwork_title() %>"/>
       <% end %>
       <%= if logo_text() do %>
         <span class="logo-text <%= unless logo(), do: "no-logo" %>"> <%= logo_text() %> </span>
